Start states and minor changes

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,1 @@
-ADD_EXECUTABLE(main main/main.cpp)
-TARGET_INCLUDE_DIRECTORIES(main PUBLIC
-                           ${CherryEngine_SOURCE_DIR}/include)
-TARGET_LINK_LIBRARIES(main cherryengine)
+ADD_SUBDIRECTORY(main)
