Finish state engine
TODO fix the CMake requirement for -lpthread. There are also some minor
changes that need to be done for the state engine, however it is mostly
complete.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,6 @@ SET(src
 
 
 # Libraries
-
 ADD_LIBRARY(cherryengine ${src})
 ADD_LIBRARY(glad glad.c)
 
@@ -25,7 +24,9 @@ TARGET_INCLUDE_DIRECTORIES(glad
                            PRIVATE
                            ${CherryEngine_SOURCE_DIR}/include)
 
+# Packages
+FIND_PACKAGE(Threads)
 
 # Linking
 TARGET_LINK_LIBRARIES(glad dl)
-TARGET_LINK_LIBRARIES(cherryengine glfw glad)
+TARGET_LINK_LIBRARIES(cherryengine glfw glad ${CMAKE_THREADS_LIBS_INIT} -lpthread)
