--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 PROJECT(CherryEngine)
 
+SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 SET(CherryEngine_VERSION_MAJOR 0)
 SET(CherryEngine_VERSION_MINOR 1)
 SET(CherryEngine_VERSION_PATCH 0)
