--- a/examples/main/CMakeLists.txt
+++ b/examples/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 ADD_EXECUTABLE(main main.cpp
-                    base_state.cpp)
+                    mystates.cpp)
 
 TARGET_INCLUDE_DIRECTORIES(main PUBLIC
                            ${CherryEngine_SOURCE_DIR}/include)
