Add basic logging
This commit lays the groundwork for the logging system to come. Still
not included are more complex behavious such as saving to a logfile or
outputting with colour.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(src
     core.cpp
     CherryEngine/main.cpp
     CherryEngine/state.cpp
+    CherryEngine/log.cpp
     state/state_machine.cpp
 )
 
